--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,10 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+I served as a teaching assistant for the following courses at MSU. I enjoy helping students master skills on analytical thinking, mathematics, and programming.
+
+<!-- {% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %} -->
