--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,10 +5,8 @@ permalink: /teaching/
 author_profile: true
 ---
 
-I served as a teaching assistant for the following courses at MSU. I enjoy helping students master skills on analytical thinking, mathematics, and programming.
-
-<!-- {% include base_path %}
-
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %} -->
+I served as a teaching assistant for the following course at the University of Minnesota. I enjoy helping students master skills on analytical thinking, mathematics, and programming. I received the Teaching Assistant at UMN in recognition of my efforts in helping students succeed in class.
+### Department of Computer Science and Engineering, University of Minnesota
+- CSCI 2033: Elementary Computational Linear Algebra (Fall 2016)
+  - Lecturing.
+  - Recitation sections, office hours, grading.
